--- a/client/styles/sudoku_tile.css
+++ b/client/styles/sudoku_tile.css
@@ -5,7 +5,7 @@
   text-align: center;
   margin: 0;
   vertical-align: middle;
-  font-size: 40pt;
+  font-size: 40px;
   background-color: white;
 }
 
