--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,18 +1,38 @@
-body {
+.board {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  /* justify-content: center; */
+  align-items: center;
+  margin: 80px 0px 40px 40px;
+}
+
+.puzzleList {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: end;
+  align-items: center;
+  margin: 40px 0px 40px 0px;
+  text-align: center;
+}
+
+
+/* body {
   display: flex;
   flex-direction: column;
   height: 100%;
   margin: 0;
-}
+} */
 
-:root {
-  background: radial-gradient(#282c34cc, #282c34);
+/* :root {
+  background: #282c34;
   color: "#282c34";
   display: flex;
   font-family: sans-serif;
   height: 100%;
   justify-content: center;
   padding: 15px;
-}
+} */
 
 
