--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -17,22 +17,8 @@
   text-align: center;
 }
 
-
-/* body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  margin: 0;
-} */
-
-/* :root {
+body {
   background: #282c34;
-  color: "#282c34";
-  display: flex;
-  font-family: sans-serif;
-  height: 100%;
-  justify-content: center;
-  padding: 15px;
-} */
+}
 
 
